--- a/src/Bundle/OutcomesBundle/Resources/serializer/Filter.DateBetweenFilter.yml
+++ b/src/Bundle/OutcomesBundle/Resources/serializer/Filter.DateBetweenFilter.yml
@@ -5,5 +5,5 @@
 # For the full copyright and license information, please view the LICENSE
 # file that was distributed with this source code.
 
-Accard\Bundle\OutcomesBundle\Outcomes\Filter\BetweenFilter:
+Accard\Bundle\OutcomesBundle\Outcomes\Filter\DateBetweenFilter:
     exclusion_policy: ALL
