--- a/src/Bundle/OutcomesBundle/Resources/config/routing.yml
+++ b/src/Bundle/OutcomesBundle/Resources/config/routing.yml
@@ -36,6 +36,16 @@ accard_outcomes_trans_dataset:
     defaults:
         _controller: AccardOutcomesBundle:Outcomes:translatedDataset
 
+accard_outcomes_generate:
+    path: /generate
+    defaults:
+        _controller: AccardOutcomesBundle:Outcomes:generate
+
+accard_outcomes_download:
+    path: /download
+    defaults:
+        _controller: AccardOutcomesBundle:Outcomes:download
+
 accard_outcomes_state:
     path: /state.json
     defaults:
