--- a/composer.json
+++ b/composer.json
@@ -9,29 +9,24 @@
     "require": {
         "php":                                   ">=5.3.3",
         "symfony/symfony":                       "2.6.*",
-        "symfony/assetic-bundle":                "~2.3",
-        "symfony/swiftmailer-bundle":            "~2.3",
-        "symfony/monolog-bundle":                "~2.4",
+        "symfony/assetic-bundle":                "~2.6",
+        "symfony/monolog-bundle":                "~2.7",
         "sensio/distribution-bundle":            "~3.0",
         "sensio/framework-extra-bundle":         "~3.0",
         "doctrine/orm":                          "~2.4",
-        "doctrine/doctrine-bundle":              "~1.3@dev",
+        "doctrine/doctrine-bundle":              "~1.4",
         "doctrine/doctrine-cache-bundle":        "~1.0",
-        "doctrine/doctrine-fixtures-bundle":     "~2.2",
         "doctrine/doctrine-migrations-bundle":   "2.1.*@dev",
-        "twig/extensions":                       "~1.0",
+        "twig/extensions":                       "~1.2",
         "incenteev/composer-parameter-handler":  "~2.0",
-        "friendsofsymfony/rest-bundle":          "~1.0",
-        "jms/serializer-bundle":                 "0.12.*",
-        "pagerfanta/pagerfanta":                 "1.0.*@dev",
-        "white-october/pagerfanta-bundle":       "1.0.*@dev",
-        "knplabs/knp-menu":                      "2.0.*@dev",
-        "knplabs/knp-menu-bundle":               "2.0.*@dev",
+        "friendsofsymfony/rest-bundle":          "~1.5",
+        "jms/serializer-bundle":                 "0.16.*",
+        "white-october/pagerfanta-bundle":       "~1.0",
+        "knplabs/knp-menu-bundle":               "~2.0",
         "mopa/bootstrap-bundle":                 "~3.0@dev",
         "twbs/bootstrap":                        "v3.2.0",
-        "friendsofsymfony/elastica-bundle":      "~3.1@dev",
-        "lexik/translation-bundle":              "~2.0",
-        "gedmo/doctrine-extensions":             "2.3.11",
-        "stof/doctrine-extensions-bundle":       "~1.1@dev"
+        "lexik/translation-bundle":              "~2.1",
+        "gedmo/doctrine-extensions":             "~2.4",
+        "friendsofsymfony/elastica-bundle":      "~3.1"
     }
 }
