--- a/src/Bundle/CoreBundle/Resources/config/services.yml
+++ b/src/Bundle/CoreBundle/Resources/config/services.yml
@@ -17,6 +17,7 @@ parameters:
     accard.fixture.option_builder.class: Accard\Bundle\CoreBundle\DataFixtures\OptionBuilder
     accard.fixture.option_value_builder.class: Accard\Bundle\CoreBundle\DataFixtures\OptionValueBuilder
     doctrine.oracle.session_listener.class: Accard\Bundle\ResourceBundle\EventListener\OracleSessionInit
+    doctrine.extension.listener.class: Accard\Bundle\CoreBundle\EventListener\DoctrineExtensionListener
 
 services:
 
@@ -65,15 +66,11 @@ services:
         class: %doctrine.oracle.session_listener.class%
         tags: [{ name: doctrine.event_listener, event: postConnect, connection: accard }]
 
-     # KernelRequest listener
-    extension.listener:
-        class: Accard\Bundle\CoreBundle\Listener\DoctrineExtensionListener
+    doctrine.extension.listener:
+        class: %doctrine.extension.listener.class%
         calls:
              - [ setContainer, [ @service_container ] ]
         tags:
-            # translatable sets locale after router processing
-            - { name: kernel.event_listener, event: kernel.request, method: onLateKernelRequest, priority: -10 }
-            # loggable hooks user username if one is in security context
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
 
     gedmo.listener.loggable:
