--- a/src/Component/Activity/composer.json
+++ b/src/Component/Activity/composer.json
@@ -2,36 +2,25 @@
     "name": "accard/activity",
     "type": "library",
     "description": "Accard activity component",
-    "keywords": ["activity"],
+    "keywords": ["accard", "activity"],
     "homepage": "http://accard.med.upenn.edu",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Frank Bardon Jr.",
-            "homepage": "http://frankbardon.com"
-        },
-        {
-            "name": "Database and Applications Group",
-            "homepage": "http://dag.med.upenn.edu"
-        }
-    ],
     "require": {
-        "php": ">=5.3.3",
-        "accard/resource": "dev-develop"
+        "php": ">=5.4.0",
+        "accard/resource": "~1.0",
+        "accard/prototype": "~1.0"
     },
-    "require-dev": {},
     "autoload": {
         "psr-4": { "Accard\\Component\\Activity\\": "" }
     },
-    "autoload-dev": {
-        "psr-4": { "Accard\\Component\\Activity\\spec\\": "spec/" }
-    },
+    "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
-            "dev-master": "0.1.0-dev"
+            "dev-master": "1.0-dev"
         }
     },
     "repositories": [
-        { "type": "vcs", "url": "git@gitlab.med.upenn.edu:prototype/Resource.git" }
+        { "type": "vcs", "url": "git@gitlab.med.upenn.edu:prototype/Resource.git" },
+        { "type": "vcs", "url": "git@gitlab.med.upenn.edu:prototype/Prototype.git" }
     ]
 }
