--- a/src/Component/Resource/composer.json
+++ b/src/Component/Resource/composer.json
@@ -1,35 +1,22 @@
-
 {
     "name": "accard/resource",
     "type": "library",
-    "description": "Resource component",
-    "keywords": ["resource"],
+    "description": "Accard resource component",
+    "keywords": ["accard", "resource"],
     "homepage": "http://accard.med.upenn.edu",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Frank Bardon Jr.",
-            "homepage": "http://frankbardon.com"
-        },
-        {
-            "name": "Database and Applications Group",
-            "homepage": "http://dag.med.upenn.edu"
-        }
-    ],
     "require": {
         "php": ">=5.4.0",
-        "doctrine/collections": "~1.0"
+        "doctrine/common": "~2.4",
+        "symfony/security": "~2.7"
     },
-    "require-dev": {},
     "autoload": {
         "psr-4": { "Accard\\Component\\Resource\\": "" }
     },
-    "autoload-dev": {
-        "psr-4": { "Accard\\Component\\Resource\\spec\\": "spec/" }
-    },
+    "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
-            "dev-master": "0.1.0-dev"
+            "dev-master": "1.0-dev"
         }
     }
 }
