--- a/src/Component/Core/composer.json
+++ b/src/Component/Core/composer.json
@@ -17,5 +17,8 @@
         "branch-alias": {
             "dev-master": "1.0-dev"
         }
-    }
+    },
+    "repositories": [
+        { "type": "composer", "url": "http://accard-dev.med.upenn.edu/satis" }
+    ]
 }
