--- a/src/Component/Core/composer.json
+++ b/src/Component/Core/composer.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.4.0",
-        "accard/resource": "~0.5"
+        "accard/resource": "~1.0"
     },
     "autoload": {
         "psr-4": { "Accard\\Component\\Core\\": "" }
@@ -15,7 +15,7 @@
     "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "1.0.x-dev"
         }
     },
     "repositories": [
