--- a/src/Component/Resource/composer.json
+++ b/src/Component/Resource/composer.json
@@ -16,7 +16,10 @@
     "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
-            "dev-master": "0.5-dev"
+            "dev-master": "1.0.x-dev"
         }
-    }
+    },
+    "repositories": [
+        { "type": "composer", "url": "http://accard-dev.med.upenn.edu/satis" }
+    ]
 }
