Unit tested through option component.

--- a/src/Component/Option/composer.json
+++ b/src/Component/Option/composer.json
@@ -11,7 +11,7 @@
     },
     "require-dev": {
         "codeception/codeception": "dev-master",
-        "codeception/specify": "dev-master"
+        "codeception/mockery-module": "dev-master"
     },
     "autoload": {
         "psr-4": { "Accard\\Component\\Option\\": "" }
