--- a/src/Component/Option/codeception.yml
+++ b/src/Component/Option/codeception.yml
@@ -9,10 +9,12 @@ settings:
     bootstrap: _bootstrap.php
     colors: true
     memory_limit: 1024M
-modules:
-    config:
-        Db:
-            dsn: ''
-            user: ''
-            password: ''
-            dump: tests/_data/dump.sql
+coverage:
+    enabled: true
+    include:
+        - Exception/*
+        - Model/*
+        - Provider/*
+        - Repository/*
+    exclude:
+        - tests/*
