--- a/src/Component/Option/composer.json
+++ b/src/Component/Option/composer.json
@@ -22,6 +22,9 @@
             "dev-master": "1.0.x-dev"
         }
     },
+    "config": {
+        "bin-dir": "bin"
+    },
     "repositories": [
         { "type": "composer", "url": "http://accard-dev.med.upenn.edu/satis" }
     ]
