--- a/src/Component/Field/codeception.yml
+++ b/src/Component/Field/codeception.yml
@@ -1,18 +1,20 @@
 actor: Tester
 paths:
-    tests: tests
-    log: tests/_output
-    data: tests/_data
-    support: tests/_support
-    envs: tests/_envs
+    tests: Tests
+    log: Tests/_output
+    data: Tests/_data
+    support: Tests/_support
+    envs: Tests/_envs
 settings:
     bootstrap: _bootstrap.php
     colors: true
     memory_limit: 1024M
-modules:
-    config:
-        Db:
-            dsn: ''
-            user: ''
-            password: ''
-            dump: tests/_data/dump.sql
+coverage:
+    enabled: true
+    include:
+        - Exception/*
+        - Model/*
+        - Provider/*
+        - Repository/*
+    exclude:
+        - tests/*
