Updated test suites with namespacing to support suite running from core.

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Accard\\Bridge\\Twig": "src/Bridge/Twig/",
+            "Accard\\Bridge\\Twig\\": "src/Bridge/Twig/",
             "Accard\\Bundle\\": "src/Bundle/",
             "Accard\\Component\\": "src/Component/"
         }
