--- a/codeception.yml
+++ b/codeception.yml
@@ -1,4 +1,3 @@
-namespace: AccardTest\Component\Prototype
 actor: Tester
 paths:
     tests: tests
@@ -17,3 +16,6 @@ modules:
             user: ''
             password: ''
             dump: tests/_data/dump.sql
+include:
+    - src/Component/Option
+    - src/Component/Field
