Attribute unit tests

--- a/src/Component/Attribute/composer.json
+++ b/src/Component/Attribute/composer.json
@@ -10,6 +10,10 @@
         "accard/resource": "~1.0",
         "accard/prototype": "~1.0"
     },
+    "require-dev": {
+        "codeception/codeception": "dev-master",
+        "codeception/mockery-module": "dev-master"
+    },
     "autoload": {
         "psr-4": { "Accard\\Component\\Attribute\\": "" }
     },
