--- a/src/Component/Sample/composer.json
+++ b/src/Component/Sample/composer.json
@@ -10,6 +10,13 @@
         "accard/resource": "~1.0",
         "accard/prototype": "~1.0"
     },
+    "require-dev": {
+        "codeception/codeception": "dev-master",
+        "codeception/mockery-module": "dev-master"
+    },
+    "config": {
+       "bin-dir": "bin"
+    },
     "autoload": {
         "psr-4": { "Accard\\Component\\Sample\\": "" }
     },
