[Feature #94080674] Component Unit tests for Resource and Sample
- Completed Unit tests for Component/Resource and Component/Sample
  with associated config files

--- a/src/Component/Resource/composer.json
+++ b/src/Component/Resource/composer.json
@@ -10,6 +10,10 @@
         "doctrine/common": "~2.4",
         "symfony/security": "~2.7"
     },
+    "require-dev": {
+        "codeception/codeception": "dev-master",
+        "codeception/mockery-module": "dev-master" 
+    },  
     "autoload": {
         "psr-4": { "Accard\\Component\\Resource\\": "" }
     },
@@ -19,6 +23,9 @@
             "dev-master": "1.0.x-dev"
         }
     },
+    "config": {
+       "bin-dir": "bin"
+    },    
     "repositories": [
         { "type": "composer", "url": "http://accard-dev.med.upenn.edu/satis" }
     ]
