--- a/src/Bundle/ResourceBundle/codeception.yml
+++ b/src/Bundle/ResourceBundle/codeception.yml
@@ -30,5 +30,5 @@ coverage:
         - AccardResourceBundle.php
     exclude:
         - bin/*
-        - tests/*
+        - Tests/*
         - vendor/*
