--- a/src/Bundle/ResourceBundle/composer.json
+++ b/src/Bundle/ResourceBundle/composer.json
@@ -14,7 +14,9 @@
         "symfony/expression-language":      "~2.7|~3.0",
         "friendsofsymfony/rest-bundle":     "~1.5",
         "white-october/pagerfanta-bundle":  "~1.0",
-        "friendsofsymfony/elastica-bundle": "~3.1"
+        "friendsofsymfony/elastica-bundle": "~3.1",
+        "doctrine/orm":                     "~2.5",
+        "doctrine/doctrine-bundle":         "~1.4"
     },
     "require-dev": {
         "codeception/codeception":          "dev-master",
