--- a/src/Component/Activity/tests/unit.suite.yml
+++ b/src/Component/Activity/tests/unit.suite.yml
@@ -3,4 +3,5 @@
 # suite for unit (internal) tests.
 class_name: UnitTester
 modules:
-    enabled: [Asserts, UnitHelper]
+    enabled: [Mockery, Asserts, \AccardTest\Component\Diagnosis\Helper\Unit]
+
