--- a/src/Component/Patient/composer.json
+++ b/src/Component/Patient/composer.json
@@ -19,6 +19,13 @@
             "dev-master": "1.0.x-dev"
         }
     },
+    "require-dev": {
+       "codeception/codeception": "dev-master",
+       "codeception/mockery-module": "dev-master"
+   },
+   "config": {
+       "bin-dir": "bin"
+   },
     "repositories": [
         { "type": "composer", "url": "http://accard-dev.med.upenn.edu/satis" }
     ]
