--- a/src/Bundle/CoreBundle/composer.json
+++ b/src/Bundle/CoreBundle/composer.json
@@ -19,7 +19,8 @@
     "require": {
         "php": ">=5.3.3",
         "accard/core":              "~1.0",
-        "accard/resource-bundle":   "~1.0"
+        "accard/resource-bundle":   "~1.0",
+        "accard/activity-bundle":   "~1.0"
     },
     "require-dev": {
         "codeception/codeception":          "dev-master",
