--- a/src/Bundle/PhaseBundle/composer.json
+++ b/src/Bundle/PhaseBundle/composer.json
@@ -36,6 +36,11 @@
     "autoload": {
         "psr-4": { "Accard\\Bundle\\PhaseBundle\\": "" }
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    },
     "config": {
         "bin-dir": "bin"
     },
