--- a/src/Bundle/AttributeBundle/composer.json
+++ b/src/Bundle/AttributeBundle/composer.json
@@ -32,6 +32,11 @@
     "autoload": {
         "psr-4": { "Accard\\Bundle\\AttributeBundle\\": "" }
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    },
     "config": {
         "bin-dir": "bin"
     },
