--- a/src/Bundle/BehaviorBundle/composer.json
+++ b/src/Bundle/BehaviorBundle/composer.json
@@ -29,6 +29,11 @@
         "codeception/codeception":          "dev-master",
         "codeception/mockery-module":       "dev-master"
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    },
     "autoload": {
         "psr-4": { "Accard\\Bundle\\BehaviorBundle\\": "" }
     },
