--- a/src/Bundle/RegimenBundle/composer.json
+++ b/src/Bundle/RegimenBundle/composer.json
@@ -35,6 +35,11 @@
     "autoload": {
         "psr-4": { "Accard\\Bundle\\RegimenBundle\\": "" }
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    },
     "config": {
         "bin-dir": "bin"
     },
