--- a/src/Bundle/SettingsBundle/composer.json
+++ b/src/Bundle/SettingsBundle/composer.json
@@ -34,6 +34,11 @@
     "autoload-dev": {
         "psr-4": { "Accard\\Bundle\\SettingsBundle\\spec\\": "spec/" }
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    },
     "config": {
         "bin-dir": "bin"
     },
