--- a/src/Bundle/WebBundle/composer.json
+++ b/src/Bundle/WebBundle/composer.json
@@ -30,6 +30,11 @@
     "autoload": {
         "psr-4": { "Accard\\Bundle\\WebBundle\\": "" }
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    },
     "config": {
         "bin-dir": "bin"
     },
