--- a/src/Bundle/ActivityBundle/composer.json
+++ b/src/Bundle/ActivityBundle/composer.json
@@ -38,6 +38,11 @@
     "config": {
         "bin-dir": "bin"
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    },
     "repositories": [
         { "type": "composer", "url": "http://accard-dev.med.upenn.edu/satis" }
     ]
