Began implementation of main Accard API to facilitate front-end development.

--- a/src/Bundle/CoreBundle/Resources/config/app/main.yml
+++ b/src/Bundle/CoreBundle/Resources/config/app/main.yml
@@ -29,22 +29,15 @@ sensio_framework_extra:
         annotations: false
 
 fos_rest:
-    param_fetcher_listener: true
-    body_listener: true
-    format_listener: true
     view:
-        view_response_listener: 'force'
         formats:
-            xml: true
             json: true
-        templating_formats:
-            html: true
-        force_redirects:
-            html: true
-        failed_validation: HTTP_BAD_REQUEST
-        default_engine: twig
-    routing_loader:
-        default_format: html
+            xml: true
+        empty_content: 204
+    format_listener:
+        rules:
+            - { path: '^/api', priorities: ['json', 'xml'], fallback_format: json, prefer_extension: true }
+            - { path: '^/', stop: true }
     serializer:
         serialize_null: true
 
