--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         "lexik/translation-bundle":              "~2.1",
         "gedmo/doctrine-extensions":             "~2.4",
         "willdurand/hateoas-bundle":             "~0.5",
-        "friendsofsymfony/jsrouting-bundle":     "^2.0@dev",
+        "friendsofsymfony/jsrouting-bundle":     "~2.0@dev",
         "knplabs/knp-menu-bundle":               "~2.0",
         "symfony/assetic-bundle":                "~2.3"
     },
