--- a/src/Bundle/UIBundle/package.json
+++ b/src/Bundle/UIBundle/package.json
@@ -13,6 +13,7 @@
     "font-awesome": "^4.3.0",
     "immutable": "^3.7.2",
     "jquery": "^2.1.4",
+    "moment": "^2.10.3",
     "object-assign": "^2.0.0",
     "postmessage-client-server": "0.0.11",
     "react": "^0.13.2",
