[UIBundle] Credits route and view created.

--- a/src/Bundle/UIBundle/Resources/config/routing.yml
+++ b/src/Bundle/UIBundle/Resources/config/routing.yml
@@ -50,3 +50,9 @@ accard_frontend_sample:
 accard_outcomes:
     resource: @AccardOutcomesBundle/Resources/config/routing.yml
     prefix: /outcomes
+
+accard_credits:
+    pattern: /credits
+    methods: [GET]
+    defaults:
+        _controller: AccardUIBundle:UI:credits
